# root_domain

./: .gitignore  Cargo.toml  Rocket.toml
src/: main.rs
static/: upload.html
static/wordle/: wordle.html
